--- a/index.html
+++ b/index.html
@@ -1,26 +1,56 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My map</title>
-		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-   integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-   crossorigin=""/>
-		<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-   integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-   crossorigin=""></script>
+        <title>Lab 2</title>
+
+         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+           integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+           crossorigin=""/>
+
+         <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+           integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+           crossorigin=""></script>
 
     </head>
 
     <body>
-		<div id="mymap" style="height: 800px"></div>
-		<script type="text/javascript">
-			var map = L.map('mymap', {
-    center: [30.290649, 122.169096],
-    zoom: 11
-});
-			L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
-	attribution: 'Tiles &copy; Esri &mdash; Source: Esri, i-cubed, USDA, USGS, AEX, GeoEye, Getmapping, Aerogrid, IGN, IGP, UPR-EGP, and the GIS User Community'
-}).addTo(map);
-		</script>
-    </body>
+        <div id="map" style="height: 500px"></div>
+
+        <script type="text/javascript">
+
+          var map = L.map('map', {
+              center: [43.88950000485, -88.88091916793427],
+              zoom: 5
+          });
+
+          L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+               attribution: '@ <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
+               maxZoom: 5,
+               minZoom: 5
+            }).addTo(map);
+			
+		var homeIcon = L.icon({
+			iconUrl: 'home.png', // url that links to the icon image file
+			iconSize:     [15, 15], // size of the icon image in pixels
+			iconAnchor:   [10, 5], // the top left corner of the icon will be aligned so that this point is at the marker's geographical location
+			popupAnchor:  [0, -5] // point from which the popup should open, relative to the iconAnchor
+		});
+		var marker1 = L.marker([43.42936011990501, -83.93386363350128], {icon: homeIcon}).addTo(map);
+		var marker2 = L.marker([41.59513796616111, -86.71107936128814], {icon: homeIcon}).addTo(map);
+		var marker3 = L.marker([45.011242873063, -93.25149394366976], {icon: homeIcon}).addTo(map);
+		var marker4 = L.marker([40.123902800234156, -88.23578670728789], {icon: homeIcon}).addTo(map);
+		var marker5 = L.marker([41.894738869313706, -87.70158204235852], {icon: homeIcon}).addTo(map);
+		var pic1 = '<img src="saginaw.png" alt="Townhouses in Saginaw, MI" width="250">';
+		var pic2 = '<img src="la porte.png" alt="House in La Porte, IN" width="250">';
+		var pic3 = '<img src="plymouth.png" alt="House in Plymouth, MN" width="250">';
+		var pic4 = '<img src="urbana.png" alt="House in Urbana, IL" width="250">';
+		var pic5 = '<img src="chicago.png" alt="Apartment in Ukranian Village, Chicago, IL" width="250">';
+		marker1.bindPopup('First home in Saginaw, Michigan. Stayed from 1997-2001' + '<br>' + pic1);
+		marker2.bindPopup('Moved to LaPorte, Indiana. Stayed from 2001-2003' + '<br>' + pic2);
+		marker3.bindPopup('Mostly grew up in Plymouth, MN. Stayed from 2003-2015' + '<br>' + pic3);
+		marker4.bindPopup('Moved to Urbana, IL for college from 2015-2018' + '<br>' + pic4);
+		marker5.bindPopup('Where I first lived in Chicago when I moved here in 2020' + '<br>' + pic5);
+        </script>
+		<a href="https://www.flaticon.com/free-icons/home-button" title="home button icons">Home button icons created by Freepik - Flaticon</a>
+   </body>
 </html>
