--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 		var marker3 = L.marker([45.011242873063, -93.25149394366976], {icon: homeIcon}).addTo(map);
 		var marker4 = L.marker([40.123902800234156, -88.23578670728789], {icon: homeIcon}).addTo(map);
 		var marker5 = L.marker([41.894738869313706, -87.70158204235852], {icon: homeIcon}).addTo(map);
-		var pic1 = '<img src="saginaw.png" alt="Townhouses in Saginaw, MI" width="250">';
-		var pic2 = '<img src="la porte.png" alt="House in La Porte, IN" width="250">';
-		var pic3 = '<img src="plymouth.png" alt="House in Plymouth, MN" width="250">';
-		var pic4 = '<img src="urbana.png" alt="House in Urbana, IL" width="250">';
-		var pic5 = '<img src="chicago.png" alt="Apartment in Ukranian Village, Chicago, IL" width="250">';
+		var pic1 = '<img src="saginaw.PNG" alt="Townhouses in Saginaw, MI" width="250">';
+		var pic2 = '<img src="la porte.PNG" alt="House in La Porte, IN" width="250">';
+		var pic3 = '<img src="plymouth.PNG" alt="House in Plymouth, MN" width="250">';
+		var pic4 = '<img src="urbana.PNG" alt="House in Urbana, IL" width="250">';
+		var pic5 = '<img src="chicago.PNG" alt="Apartment in Ukranian Village, Chicago, IL" width="250">';
 		marker1.bindPopup('First home in Saginaw, Michigan. Stayed from 1997-2001' + '<br>' + pic1);
 		marker2.bindPopup('Moved to LaPorte, Indiana. Stayed from 2001-2003' + '<br>' + pic2);
 		marker3.bindPopup('Mostly grew up in Plymouth, MN. Stayed from 2003-2015' + '<br>' + pic3);
